--- a/20150102-property/index.html
+++ b/20150102-property/index.html
@@ -40,6 +40,8 @@
 </div>
 
 <div id='map'></div>
+
+<a href="https://docs.google.com/spreadsheets/d/18diow7hznyPQIhSgpz1J27vbgUagrnwE7fnHgUvju3M/pub?output=csv" target="_new"><button class="downloadButton">&#9660; Download Data</button></a>
 </body>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
