--- a/20150412-birdflu/index.html
+++ b/20150412-birdflu/index.html
@@ -70,7 +70,7 @@
 
 </div>
 
-<a href='https://www.bah.state.mn.us/avian-influenza#affected-counties' target='new_'><button class='downloadButton'>&#9660; Download Data</button></a>
+<a href='https://docs.google.com/spreadsheets/d/1JpW0sgMM4grkFjkj1UI6JF8ajmMCAwUsNzshTAp_EQk/pub?output=csv' target='new_'><button class='downloadButton'>&#9660; Download Data</button></a>
 
 </div>
 
