--- a/20150610-bakken/index.html
+++ b/20150610-bakken/index.html
@@ -3148,7 +3148,7 @@ impression_data.push({"moduleType":"page-nav","moduleName":"All Section Navigati
 </div>
 
 <div class="download_links">
-  <div class="download"><a href="https://github.com/jhargarten/dataviz-projects/blob/master/strib/20150610-bakken/data/oiltraindata.zip?raw=true" target="new_"><button class="downloadButton">▼ Download Data</button></a></div><p></p>
+  <div class="download"><a href="https://docs.google.com/spreadsheets/d/1nUZ3tkpty2ajdD-mupvV6YsE6NvZKn2cmQWPi-ET1MA/pub?output=xlsx" target="new_"><button class="downloadButton">▼ Download Data</button></a></div><p></p>
 </div>
 
 <div id="credits">
