--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -55,8 +55,8 @@
    .navButton { width:100%; background-color:#ddd; padding:15px; border:none; font-size:1.4em; font-weight:900;  }
    .navButton:hover { color:#fff; background-color:#333; cursor:pointer;  }
 
-   .switch { padding:10px; display:inline-block; text-align:center; width:126px; background-color:#fff; font-weight:bold; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid #999; margin-top:0 !important; }
-   .bigswitch { padding:10px; display:inline-block; text-align:center; background-color:#fff; font-weight:bold; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid #999;  margin-top:4px; width:140px; }
+   .switch { padding:10px; display:inline-block; text-align:center; width:100px; background-color:#fff; font-weight:bold; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid #999; margin-top:0 !important; }
+   .bigswitch { padding:10px; display:inline-block; text-align:center; background-color:#fff; font-weight:bold; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid #999;  margin-top:4px; width:130px; }
    .switch:hover, .bigswitch:hover, .selected { background-color:#8C101C !important; color:#fff !important; cursor:pointer; margin-bottom:0 !important; }
    #filterButtons { text-align:left; }
 
@@ -82,28 +82,28 @@
 
    #all, #all_m, #raceB { border-top-left-radius:.8em; border-bottom-left-radius:.8em; }
    #mentalB, #mentalB_m, #weaponB { border-top-right-radius:.8em; border-bottom-right-radius:.8em; }
-   #mentalB, #mentalB_m { margin-left:-1px;margin-right:8px; } 
+   #mentalB, #mentalB_m { margin-left:-1px;margin-right:5px; } 
    #raceB, #genderB, #mannerB, #placeB, #weaponB { margin-left:-1px; }
     
 
-   .bigDot { border-radius:50%; width:18px; float:left; height:18px; text-align:center; background-color:#ddd; display:inline-block; vertical-align:bottom; margin:6px; }
-   .dot { border-radius:50%; width:20px; height:20px; text-align:center; background-color:#ddd; display:inline-block; vertical-align:bottom; margin-bottom:3px; }
+   .bigDot { border-radius:50%; width:15px; float:left; height:15px; text-align:center; background-color:#ddd; display:inline-block; vertical-align:bottom; margin:6px; }
+   .dot { border-radius:50%; width:15px; height:15px; text-align:center; background-color:#ddd; display:inline-block; vertical-align:bottom; margin-bottom:3px; }
    .dot:hover, .mentalSwatch, .bigDot:hover { background-color:#333 !important; cursor:pointer; }
    .mentalSwatch { background-color:#8C101C !important; color:white !important; padding:5px; font-weight:900; }
 /*   .circle { border:3px solid #333; }*/
    .faded { opacity:.4 !important; }
-   .active { opacity:1 !important; background-color:#333 !important; }
+   .active { opacity:1 !important; background-color:#333 !important; width:15px;height:15px;}
 
    .chatter { height:70px; }
 
-   #sidebar { width:260px; height:290px; float:left; margin-right:20px; background-color: lemonchiffon}
+   #sidebar { width:260px; height:290px; float:left; margin: 15px 20px 0 0; background-color: lemonchiffon}
    #selector { display:none; text-align:center; }
    #selector .bigswitch { width:49%;}
 
    .filterSection { display:none; }
     
    #chart { margin:10px; vertical-align:bottom;  }
-   #chartAll { width:630px; float:right; background-color:beige;}
+   #chartAll { width:610px; float:right; background-color:beige; margin: 15px 0 15px 0}
    #chartLabels { margin:10px; }
    .year { width:5%; height:270px; display:table-cell; vertical-align:bottom; text-align:center; }
    .yearLabel { width:5.25%; display:inline-block; text-align:center; font-size:.9em; font-weight:600; }
