--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 /*RESOURCES*/
       #resourcesBlock { display:none; }
       .linkage { padding:5px; }
-      #databankLink { font-weight:900; margin-right:auto; margin-left:auto; padding:20px; text-align:center; }
+      .databankLink { font-weight:900; margin-right:auto; margin-left:auto; padding:20px; text-align:center; }
+      .source { font-size:1em !important; }
       
 /*FOOTER*/
       .scrollToTop { color:#87C944 !important; text-align:center; padding:15px; }
@@ -318,7 +319,7 @@
 
 </div>
 
-<div id="databankLink"><a href="https://drive.google.com/a/umn.edu/folderview?id=0B01GwdexvA5PSjlSc0VlQlZkdE0&usp=sharing" target="new_">StarTribune Databank</a></div>
+<div class="databankLink"><a href="https://drive.google.com/a/umn.edu/folderview?id=0B01GwdexvA5PSjlSc0VlQlZkdE0&usp=sharing" target="new_">StarTribune Databank</a> | <a href="http://panda.star.local/#search/all" target="new_">Panda Database</a></div>
 </div>
 
 <!-- <div class="more"><a  href="javascript:void(0)">See more</a></div>
