--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       #links_m { display:none; }
       #contribs { display:none; }
       #contributors { display:none; }
+      .linkSelect { background-color:#ddd !important; }
 
 /*DROPDOWN*/
       .wrapper-dropdown { width:100% !important; }
@@ -485,22 +486,23 @@ spitResources("graphics");
 
 var killPaging = false;
 
-$('#allProjects, #allProjects_m').css("background-color","#ddd");
+$('#allProjects, #allProjects_m').addClass("linkSelect");
   $( ".sort-link" ).each(function( index ) {
   var type = "." + $(this).attr("id");
   $(this).find(".count").html($(type).length);
 });
 
-  $("#allProjects, #allProjects_m").find(".count").html($(".articleEntry").length);
+$("#allProjects, #allProjects_m").find(".count").html($(".articleEntry").length);
+
 $( ".sort-link" ).click(function() {
   killPaging = true;
   $('#search-criteria_m').val("");
   $('#search-criteria').val("");
   $(".articleEntry").hide();
-  $(".sort-link").css("background-color","#fff");
-  $(this).css("background-color","#ddd");
-  console.log($(this).attr("data"));
+  $(".sort-link").removeClass("linkSelect");
+  $(this).addClass("linkSelect");
   $("." + $(this).attr("id")).show();
+  if ($(this).attr("id") != "allProjects" && $(this).attr("id") != "allProjects_m") { window.history.pushState(null, null, '/?cat=' + $(this).attr("id")); }
   $("#resourcesBlock").hide();
   if ($(this).attr("id") != "tools") { $(".tools").hide(); }
   if ($(this).attr("id") == "resources") { $(".articleEntry").hide(); $("#resourcesBlock").show(); }
@@ -511,17 +513,15 @@ $( "#allProjects, #allProjects_m" ).click(function() {
   $(".tools").hide();
   $("#resourcesBlock").hide();
   $(".sort-link").css("background-color","#fff");
-  $(this).css("background-color","#ddd");
+  $(this).addClass("linkSelect");
 });
 
 $( document ).ready(function() {
-   
-
  $('#search-criteria').keyup(function(){
     $('.articleEntry, .linkage').hide();
     $(".sort-link").css("background-color","#fff");
     var txt = $('#search-criteria').val();
-    if (txt == '') { $('#allProjects').css("background-color","#ddd"); $("#resourcesBlock").hide(); }
+    if (txt == '') { $('#allProjects').addClass("linkSelect"); $("#resourcesBlock").hide(); }
     $('.articleName, .byline, .linkage').each(function(){
        if($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1){
            $(this).parent().show();
@@ -534,7 +534,7 @@ $('#search-criteria_m').keyup(function(){
     $('.articleEntry, .linkage').hide();
     $(".sort-link").css("background-color","#fff");
     var txt = $('#search-criteria_m').val();
-    if (txt == '') { $('#allProjects').css("background-color","#ddd"); $("#resourcesBlock").hide(); }
+    if (txt == '') { $('#allProjects').addClass("linkSelect"); $("#resourcesBlock").hide(); }
     $('.articleName, .byline, .linkage').each(function(){
        if($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1){
            $(this).parent().show();
@@ -567,6 +567,33 @@ $(window).scroll(function() {
    }
  }
 });
+
+$.urlParam = function(name){
+  var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+  if (results != null) { return results[1]; }
+  else { return 0; }
+}
+
+if ($.urlParam('cat') != 0 ) {
+  var catTerm = $.urlParam('cat'); 
+  $(".articleEntry").hide();
+  $(".sort-link").removeClass("linkSelect");
+  $("#dataSidebar #" + catTerm).addClass("linkSelect");
+  $("." + catTerm).show();
+  killPaging = true;
+}
+
+
+if ($.urlParam('page') != 0 ) {
+  var pageTerm = $.urlParam('page'); 
+  $(".sort-link").removeClass("linkSelect");
+  killPaging = true;
+  if (pageTerm == "resources") { 
+    $(".articleEntry").hide(); 
+    $("#resourcesBlock").show(); 
+    $("#dataSidebar #resources").addClass("linkSelect");
+  }
+}
 
 });
 });
